--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.servlet.multipart.max-file-size=100000000000000KB
 spring.servlet.multipart.max-request-size=1000000000000000KB
+
+spring.session.store-type=redis
+
